syntax = "proto2";
package PTP.Auth;
import "PTP.Common.proto";
option java_package = "com.ptp.im.protobuf";

option optimize_for = LITE_RUNTIME;

message AuthCaptchaReq{

}

message AuthCaptchaRes{
	required string captcha = 1;
	required bytes address = 2;
	required bytes iv = 3;
	required bytes aad = 4;
	required bytes sign = 5;
	required Common.ERR error = 6;
}

message AuthLoginReq{
	required string address = 1;
	required string captcha = 2;
	required Common.ClientType client_type = 3;
	optional string client_version = 5;
	required bytes sign = 6;
}

message AuthLoginRes{
	required Common.ERR error = 2;
	optional Common.UserInfo user_info = 5;
}

message AuthLogoutReq{

}

message AuthLogoutRes{
	required Common.ERR error = 3;

}

